--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,12 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+
+-   repo: https://github.com/tekwizely/pre-commit-golang
+    rev: master
+    hooks:
+      - id: go-fmt-repo
+      - id: go-mod-tidy
+      - id: go-vet-mod
+      - id: go-test-mod
+      - id: go-staticcheck-mod
